# hevc_player

./: .gitignore  CMakeLists.txt  GitVersioner.cmake  Hevc_view.pro  README.md  Version.cmake  VideoOutput.cpp  VideoOutput.h  ffmpeg.cpp  ffmpeg.h  hevc_qimage_engine.cpp  hevc_qimage_engine.h  imageProvider.cpp  imageProvider.h  image_provider.cpp  image_provider.h  main.cpp  player.cpp  player.h  qml.qrc  rc.qrc  sei_data.h  session.cpp  session.h  video_output.cpp  video_output.h
DOC/: Doxyfile
DOC/html/: _c_make_lists_8txt.html  _version_8h.html  _version_8h_source.html  annotated.html  class_base.html  class_hevc_q_image_engine-members.html  class_hevc_q_image_engine.html  class_hevc_q_image_engine__coll__graph.dot  class_hevc_q_image_engine__inherit__graph.dot  class_image_provider-members.html  class_image_provider.html  class_image_provider__inherit__graph.dot  class_player-members.html  class_player.html  class_player__coll__graph.dot  class_player__inherit__graph.dot  class_session-members.html  class_session.html  class_session__coll__graph.dot  class_session__inherit__graph.dot  class_the.html  class_video_output-members.html  class_video_output.html  class_video_output__coll__graph.dot  class_video_output__inherit__graph.dot  classes.html  dir_c0214492f5dbdfeb75afdd9fb2c4e627.html  dir_c088d9039decfcf39c85aae8d9153291.html  dir_c5ad160b486fcc30fe04578ffefb3244.html  doxygen_crawl.html  files.html  functions.html  functions_enum.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  hevc__qimage__engine_8cpp.html  (+53 more)
DOC/html/search/: all_0.js  all_10.js  all_11.js  all_13.js  all_14.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  classes_8.js  defines_0.js  defines_1.js  defines_3.js  enums_0.js  enumvalues_0.js  files_1.js  files_2.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  (+33 more)
Resource/: rc.qrc
Resource/qml/: CustomButton.qml  CustomSwitch.qml  OpenVideo.qml  Options.qml  PlayerControl.qml  SaveVideo.qml  SeiToSaveWindow.qml  ShowSEI.qml  VideoFlow.qml  main.qml  qml.qrc
Version/: Version.h  Version.h.in
qml/: FileBrowser.qml  PlayerControl.qml  VideoFlow.qml  main.qml
